--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,36 @@
-body, html {
+@import url('https://fonts.cdnfonts.com/css/acapulco');
+
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
     font-size: 20px;
 }
+
 :root {
-    --text-primary: #f2f0ff;
-    --text-secondary: #a7a2c3;
-  }
+    --text-primary: #e8e117;
+    --text-secondary: #8A5E7C;
+}
 
 a {
     color: inherit;
+}
+
+.hero-title {
+    font-family: 'ACAPULCO', sans-serif;
+    margin-top: -10vh;
+    padding-bottom: 1em;
+    text-transform: uppercase;
+    font-size: 2em;
+    color: var(--text-primary);
+
+}
+
+.hero-copy {
+    color: var(--text-primary);
+    font-size: 14px;
+
 }
 
 .page {
@@ -33,15 +53,8 @@ a {
 }
 
 .scroll-msg {
-	 margin-top: 2em;
+    margin-top: 2em;
     pointer-events: none;
-}
-
-.scroll-msg > div:nth-child(1) {
-    margin-top: -10vh;
-    padding-bottom: 1em;
-    text-transform: uppercase;
-    font-size: 2em;
 }
 
 .text-overlay {
@@ -63,6 +76,7 @@ canvas#gooey-overlay {
 .arrow-animated {
     font-size: 1em;
     animation: arrow-float 1s infinite;
+    color: var(--text-primary);
 }
 
 @keyframes arrow-float {
@@ -70,10 +84,12 @@ canvas#gooey-overlay {
         transform: translateY(0);
         animation-timing-function: ease-out;
     }
+
     60% {
         transform: translateY(50%);
         animation-timing-function: ease-in-out;
     }
+
     100% {
         transform: translateY(0);
         animation-timing-function: ease-out;
@@ -101,9 +117,17 @@ canvas#gooey-overlay {
     z-index: 999;
 }
 
-.text-primary{
-    color: var(--text-primary);
-}
-.text-secondary{
-    color: var(--text-secondary);
-}
+
+@media (min-width: 768px) {
+
+    .hero-title {
+        font-family: 'ACAPULCO', sans-serif;
+        text-transform: uppercase;
+        font-size: 9rem;
+        color: var(--text-primary);
+        padding-bottom: 0;
+    
+    }
+
+   
+  }
