--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/acapulco');
+@import url('https://fonts.cdnfonts.com/css/lovely-jeanne-script');
+
+
 
 body,
 html {
@@ -8,6 +11,10 @@ html {
     font-size: 20px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --text-primary: #e8e117;
     --text-secondary: #8A5E7C;
@@ -15,22 +22,66 @@ html {
 
 a {
     color: inherit;
+    text-decoration: none;
+}
+
+.home-logo {
+    height: 25px;
+    z-index: 99;
+    position: fixed;
+    top: 30px;
+    left: 30px;
+
+}
+
+.projects {
+    z-index: 99;
+    position: fixed;
+    right: 30px;
+    top: 30px
+}
+
+.about {
+    z-index: 99;
+    position: fixed;
+    right: 30px;
+    bottom: 30px
+}
+
+.email {
+    z-index: 99;
+    position: fixed;
+    left: 30px;
+    bottom: 30px
 }
 
 .hero-title {
     font-family: 'ACAPULCO', sans-serif;
     margin-top: -10vh;
     padding-bottom: 1em;
-    text-transform: uppercase;
     font-size: 2em;
     color: var(--text-primary);
 
 }
 
-.hero-copy {
+.hero-copy,
+.projects,
+.about,
+.email,
+.secondary-text {
     color: var(--text-primary);
     font-size: 14px;
+    transition: color 0.3s ease;
+}
 
+nav a:hover {
+    color: #f8f239;
+    transform: translateY(-2px);
+}
+
+.text-overlay {
+    width: 100%;
+    height: 80vh;
 }
 
 .page {
@@ -42,7 +93,7 @@ a {
     opacity: 0;
 }
 
-.text-overlay,
+
 .scroll-msg {
     width: 100%;
     height: 100vh;
@@ -114,7 +165,7 @@ canvas#gooey-overlay {
 }
 
 .lil-gui.autoPlace {
-    z-index: 999;
+    z-index: 1;
 }
 
 
@@ -126,8 +177,54 @@ canvas#gooey-overlay {
         font-size: 9rem;
         color: var(--text-primary);
         padding-bottom: 0;
-    
+
     }
 
-   
-  }
+
+}
+
+/* ABOUT.HTML ---------------------------------------- */
+.about-body {
+    background-color: #000000;
+    height: 100vh;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.about-stack {
+    font-family: 'ACAPULCO', sans-serif;
+    display: flex;
+    margin-top: 10rem;
+    text-align: center;
+}
+
+.about-text {
+    font-size: 5rem;
+    position: relative;
+    color: var(--text-secondary);
+
+}
+
+.me-text {
+    color: var(--text-primary);
+    font-family: 'Lovely Jeanne Script', sans-serif;
+    text-transform: lowercase;
+    font-size: 2rem;
+
+}
+
+.about-copy{
+    color: var(--text-primary);
+    width: 40%;
+
+}
+
+
+
+  
