--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,8 @@ html {
     padding: 0;
     font-family: sans-serif;
     font-size: 20px;
-}
-
-html {
     scroll-behavior: smooth;
+
 }
 
 :root {
@@ -167,8 +165,51 @@ canvas#gooey-overlay {
 .lil-gui.autoPlace {
     z-index: 1;
 }
+.hover-link {
+    margin: 1rem;
+  }
+  
+  #image-preview {
+    position: fixed;
+    display: none;
+    width: 150px;
+    height: 100px;
+    background-size: cover;
+    background-position: center;
+    pointer-events: none;
+  }
+  
+  /* SPLIDE */
+.my-slider-progress {
+    background: #ccc;
+  }
+  
+  .my-slider-progress-bar {
+    background: greenyellow;
+    height: 2px;
+    transition: width 400ms ease;
+    width: 0;
+  }
+  
+  .proj{
+    padding-top: 3rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3rem;
+  }
+  .proj img{
+    height: 50vh;
+  }
 
-
+  .proj-link{
+    padding-top: 1rem;
+    color: var(--text-primary);
+    font-size: 14px;
+    text-decoration: underline;
+  }
 @media (min-width: 768px) {
 
     .hero-title {
@@ -180,9 +221,13 @@ canvas#gooey-overlay {
 
     }
 
+    .proj img{
+        height: 70vh;
+      }
 
 }
 
+ 
 /* ABOUT.HTML ---------------------------------------- */
 .about-body {
     background-color: #000000;
@@ -224,7 +269,5 @@ main{
     width: 40%;
 
 }
-
-
 
   
